// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle aria 1`] = `
<DocumentFragment>
  <button
    aria-describedby="test-id-1"
    aria-label="test toggle"
    aria-labelledby="test-id-2"
    class="toggle inlineCenter"
    role="switch"
    type="button"
    value="0"
  >
    <span
      class="bar"
    />
    <span
      class="knob"
    />
  </button>
</DocumentFragment>
`;

exports[`Toggle className 1`] = `
<DocumentFragment>
  <button
    class="toggle c inlineCenter"
    role="switch"
    type="button"
    value="0"
  >
    <span
      class="bar"
    />
    <span
      class="knob"
    />
  </button>
</DocumentFragment>
`;

exports[`Toggle disabled 1`] = `
<DocumentFragment>
  <button
    class="toggle inlineCenter"
    data-testid="toggle"
    disabled=""
    role="switch"
    type="button"
    value="0"
  >
    <span
      class="bar"
    />
    <span
      class="knob"
    />
  </button>
</DocumentFragment>
`;

exports[`Toggle value is false 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="toggle inlineCenter"
    role="switch"
    type="button"
    value="0"
  >
    <span
      class="bar"
    />
    <span
      class="knob"
    />
  </button>
</DocumentFragment>
`;

exports[`Toggle value is true 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="toggle inlineCenter"
    role="switch"
    type="button"
    value="1"
  >
    <span
      class="bar barOn"
    />
    <span
      class="knob knobOn"
    />
  </button>
</DocumentFragment>
`;
